# modosaurus

./: README.md  modosaurus.py  pyproject.toml  test_modosaurus.py
.github/workflows/: python-build.yml  python-test.yml
src/modosaurus/: __main__.py
tests/: test_modosaurus.py
